--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,6 +17,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LessonManager"
         tools:targetApi="31">
+        <activity
+            android:name=".EditLessonActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LessonDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddLessonActivity"
+            android:exported="false" />
         <activity
             android:name=".auth.RegisterActivity"
             android:exported="true" />
